--- a/style/main.css
+++ b/style/main.css
@@ -1,11 +1,39 @@
-body{
-
-    //background-color: #000000;
-
-}
-
+/*reset de layout*/
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+:root{
+    /*Declarando variaveis no CSS
+    Extremamente util para quando ocorre muita repetição de dados e não quer ficar procurando no CSS pra não trocar 1 a 1*/
+    --vermelho: #E50914;
+    --preto: #141414;
+}
+body{
+    background-color: var(--preto);
+    font-family: 'Times New Roman', Times, Serif;
+}
+
+header .container{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+header .logo{
+    color: var(--vermelho);
+    font-family: 'Arial Black', Times;
+    font-size: 40px;
+;
+}
+
+header nav a{
+    text-decoration: none;
+    color: #AAA;
+    margin-right: 10px;
+}
+
+header nav a:hover{
+    color: #fff;
 }
