Editando o css e flex-box

--- a/style/main.css
+++ b/style/main.css
@@ -10,6 +10,7 @@
     --vermelho: #E50914;
     --preto: #141414;
 }
+/*Elementos base*/
 body{
     background-color: var(--preto);
     font-family: 'Times New Roman', Times, Serif;
@@ -37,4 +38,26 @@ header nav a{
 
 header nav a:hover{
     color: #fff;
+}
+
+/*Filme Principal*/
+.filme-principal{
+    font-size: 16px;
+    background: linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50)100%), url('/img/capa.jpg');
+    height: 400px;
+    background-size: cover;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+.titulo{
+    font-size: 45px;
+}
+.filme-principal .descricao{
+    margin-bottom: 40px;
+}
+.botao{
+
 }
