--- a/style/main.css
+++ b/style/main.css
@@ -52,12 +52,26 @@ header nav a:hover{
     justify-content: center;
     align-items: flex-start;
 }
-.titulo{
+.filme-principal .titulo{
+    margin-top: 10%;
     font-size: 45px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 .filme-principal .descricao{
     margin-bottom: 40px;
 }
 .botao{
+    background-color: rgba(0,0,0,50);
+    border: none;
+    color: white;
+    padding: 15px 30px;
+    margin-right: 15px;
+    font-size: 12px;
+    cursor: pointer;
+    transition: 0.5s ease all;
+}
 
+.botao:hover{
+    background-color: white;
+    color: #141414;
 }
