Adcionando pacote de carrousel .js do OWL

--- a/style/main.css
+++ b/style/main.css
@@ -80,3 +80,11 @@ header nav a:hover{
 .botao i{
     margin-right: 5px;
 }
+
+.container{
+    margin-left: 15px;
+}
+
+.filme-principal .container{
+    width: 70%;
+}
